--- a/index.html
+++ b/index.html
@@ -607,6 +607,7 @@
         <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
         <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
     </body>
-        <script async src="https://zipboardapp.s3.amazonaws.com/widget/widget.js"></script>
-        <script type="application/json">{"zbKey": "7e9038ac76057d0d07e8bb86"}</script>
+<!--         <script async src="https://zipboardapp.s3.amazonaws.com/widget/widget.js"></script>
+        <script type="application/json">{"zbKey": "7e9038ac76057d0d07e8bb86"}</script> -->
+    <script src="widget.js"></script>
 </html>
